--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /* DEFAULT ELEMENTS */
 body {
-    background-color: #0F0F0F;
+    background-color: #141414;
     margin: 0;
 }
 
@@ -21,7 +21,7 @@ nav {
     padding-bottom: 4vh;
     padding-left: 2rem;
 
-    background-image: linear-gradient(rgba(15, 15, 15, 1.0), rgba(15, 15, 15, 0.0));
+    background-image: linear-gradient(rgba(20, 20, 20, 1.0), rgba(20, 20, 20, 0.0));
 }
 
 main {
@@ -123,7 +123,7 @@ p {
 }
 
 .dot {
-    color: #0F0F0F;
+    color: #141414;
     letter-spacing: 8vw;
     text-align: center;
     line-height: 6rem;
@@ -207,7 +207,7 @@ p {
 
 .social-link {
     display: inline-block;
-    border-bottom: 1px solid #0F0F0F;
+    border-bottom: 1px solid #141414;
     transition: all 0.7s;
 }
 
