--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
     display: flex;
     width: 100vw;
     position: fixed;
-    gap: 55px;
+    gap: 45px;
 
     padding-top: 1vh;
     padding-bottom: 4vh;
@@ -27,6 +27,7 @@ nav {
 main {
     margin: 0 31.25vw 200px;
     padding-top: 30vh;
+    /*border: 1px red solid;*/
 }
 
 
@@ -76,7 +77,6 @@ a {
     font-size: 1rem;
     color: #999999;
     text-decoration: none;
-
 }
 
 p {
@@ -86,47 +86,21 @@ p {
     color: #DDDDDD;
 }
 
-/* CLASSES */
-
-/* General */
-
-
+.section {display:block;}
 
 .section-head {
-    letter-spacing: 2vw;
+    letter-spacing: 1vw;
     transition: all 1.3s;
 }
 
-#experience:hover .section-head {
-    letter-spacing: 3.4vw;
-}
+.section:hover .section-head {letter-spacing:1.5vw;}
 
-#projects:hover .section-head {
-    letter-spacing: 4.6vw;
-}
 
-#about:hover .section-head {
-    letter-spacing: 8.5vw;
-}
+/* HERO SECTION */
 
-/* Nav Section */
-.nav-link {
-    text-decoration: none;
-    color: white;
-    opacity: 25%;
-
-    transition: all 0.5s
-}
-
-.nav-link:hover {opacity: 100%}
-
-.nav-link.active {opacity: 100%}
-
-/* Hero Section */
 .hero-title {
     padding: 0;
-
-    margin: 0 auto;
+    margin:0;
 
     text-align: left;
     color: white;
@@ -145,20 +119,51 @@ p {
 
 .fading-dot {
     padding: 0;
-    margin: 0 1vw 0 0;
+    margin-right: 1vw;
 
-    text-align: left;
-    letter-spacing: 0;
-    line-height: 10rem;
+    line-height: 8rem;
 }
 
-/* Experience Section */
+#name {
+    display: block;
+    gap: 1rem;
+    width: 25vw;
+    height: 400px;
+
+    margin: 0 auto 12rem auto;
+
+    transition: all 0.7s;
+}
+
+#name:hover {width: 28vw;}
+
+
+/* NAV SECTION */
+
+.nav-link {
+    text-decoration: none;
+    color: white;
+    opacity: 25%;
+
+    transition: all 0.5s
+}
+
+.nav-link:hover {opacity: 100%}
+
+.nav-link.active {opacity: 100%}
+
+
+/* EXPERIENCE SECTION */
+
 .timeline-holder {
     display: flex;
+    justify-content: center;
     gap: 4rem;
+
     margin-left: auto;
     margin-right: auto;
 }
+
 .line {
     width: 1px;
     height: 200px;
@@ -190,7 +195,9 @@ p {
 
 .timeline-space {height: 215px;}
 
-/* Projects Section */
+
+/* PROJECTS SECTION */
+
 .card-holder {
     width: auto;
     display: flex;
@@ -215,7 +222,7 @@ p {
     color: #999999;
 }
 
-/* About Section */
+/* ABOUT SECTION */
 .socials {
     display: flex;
     gap: 1.5vw;
@@ -245,23 +252,9 @@ p {
     color: white;
 }
 
-/* ID's */
-#name {
-    display: block;
-    gap: 1rem;
-    width: 25vw;
-    height: 400px;
-
-    margin: 0 auto 12rem auto;
-
-    transition: all 0.7s;
-}
-
-#name:hover {
-    width: 28vw;
-}
 
 /* SCROLLBAR */
+
 body::-webkit-scrollbar {
     width: 0;
 }
@@ -279,6 +272,7 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 768px) {
+
     main {margin: 0 7vw 200px;}
 
     nav {display: none;}
@@ -287,13 +281,33 @@ body::-webkit-scrollbar {
 
     .section-head {letter-spacing: 5vw;}
 
-    .section:hover .section-head {letter-spacing: 8vw;}
-
     .socials {gap: 3vw;}
 
     .hero-title {letter-spacing: 10vw;}
 
     #name {transform:translateX(-5vw)}
 
-    #name:hover {transform:translateX(0)}
+
+    /* Disabling all hover effects for mobile */
+    .section:hover .section-head {letter-spacing:5vw;}
+
+    #name:hover {transform:translateX(-5vw)}
+
+    #name:hover {width: 25vw;}
+
+    .nav-link:hover {opacity: 100%}
+
+    .timeline-text:hover {transform: translateY(0);}
+
+    .card:hover{transform: translateY(0);}
+
+    .social-link:hover {
+        border-bottom-color: #141414;
+        transform: translateY(0);
+    }
+
+    .social-link:hover .social-text {
+        transform: translateY(0);
+        color: #999999;
+    }
 }
