--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ body::-webkit-scrollbar {width: 0;}
 
     /* increase font size */
 
-    body {font-size: 1.25rem;}
+    body {font-size: 18px;}
 
 
     main {margin: 0 7vw 200px;}
