--- a/style.css
+++ b/style.css
@@ -273,37 +273,33 @@ nav {
 ::-webkit-scrollbar-thumb:hover {background: #3d3d3d;}
 
 
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
     main {margin: 0 20vw 200px;}
 
     .card-holder {gap: 3vw;}
 
     .socials {gap: 3vw;}
 
-    #name {
-        /*border: 1px red solid;*/
-        width: 30vw;
-    }
+    #name {width: 30vw;}
 
     #name:hover {width: 30vw;}
 }
 
 
-@media (max-width: 800px) {
-
+@media (max-width: 800px) and (orientation: portrait) {
     /* increase font size */
 
-    h1 {
-        font-size: 24px;
-    }
+    /*h1 {*/
+    /*    font-size: 24px;*/
+    /*}*/
 
-    h2 {
-        font-size: 24px;
-    }
+    /*h2 {*/
+    /*    font-size: 24px;*/
+    /*}*/
 
-    p {
-        font-size: 24px;
-    }
+    /*p {*/
+    /*    font-size: 24px;*/
+    /*}*/
 
 
     main {margin: 0 7vw 200px;}
