--- a/style.css
+++ b/style.css
@@ -10,18 +10,23 @@
 
 body {
     background-color: #141414;
+    line-height: 1.6rem;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     overflow-y: auto;
 }
 
 main {
     margin: 0 29vw 30vh;
-    padding-top: 225px;
+    padding-top: 32.5vh;
     transform: translateX(7px);
 }
 
 ::selection {
     background: #2c2c2c;
+    color: white;
 }
 
 h1 {
@@ -211,8 +216,15 @@ nav {
 
 /* PROJECTS SECTION */
 
+#projects {
+    /*border: 1px solid yellow;*/
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+
+}
+
 .card-holder {
-    width: 100%;
     display: flex;
     flex-wrap: nowrap;
     gap: 10px;
@@ -221,17 +233,16 @@ nav {
 }
 
 .card {
-    width: 175px;
-    height: 175px;
+    height: 200px;
     transition: all 0.3s;
-
 }
 
 .row {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 175px;
+    width: calc((42vw - 20px) / 3); /* 100vw - margins - gaps / 3 */
+    min-width: 175px;
 }
 
 .card:hover{
@@ -289,7 +300,7 @@ nav {
 @media (max-width: 1300px) {
     main {margin: 0 20vw 200px;}
 
-    .card-holder {gap: 3vw;}
+    .row {width: calc((60vw - 20px) / 3);}
 
     .socials {gap: 3vw;}
 
@@ -313,7 +324,7 @@ nav {
 
     .timeline-holder {gap: 3rem;}
 
-    .card-holder {gap: 3vw;}
+    .row {width: calc((86vw - 20px) / 3);}
 
     .section-head {letter-spacing: 5vw;}
 
