--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p {
     display: block;
     overflow: hidden;
 
-    padding-top: 200px;
+    padding-top: 150px;
 }
 
 .section-head {
@@ -120,6 +120,8 @@ nav {
 .nav-link:hover {opacity: 100%}
 
 .nav-link.active {opacity: 100%}
+
+h3 {line-height: 1rem;}
 
 
 /* HERO SECTION */
