--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body {
     background-color: #141414;
-    line-height: 1.6rem;
+    line-height: 1.65rem;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -24,10 +24,7 @@ main {
     transform: translateX(7px);
 }
 
-::selection {
-    background: #2c2c2c;
-    color: white;
-}
+::selection {background: #2c2c2c;}
 
 h1 {
     font-family: "London-Underground", "serif";
