--- a/styles/main.css
+++ b/styles/main.css
@@ -187,6 +187,8 @@ nav {
     z-index: 10;
 }
 
+.timeline-text:hover .card-title {color: white;}
+
 .timeline-space {height: 215px;}
 
 
@@ -226,9 +228,12 @@ nav {
     z-index: 10;
 }
 
+.card:hover .card-title {color: white;}
+
 .card-title {
     color: #e3e3e3;
-    padding-bottom: 1rem;
+    padding-bottom: 0.25rem;
+    transition: all 0.3s;
 }
 
 .card-description {
