scrollbar color update

--- a/styles/main.css
+++ b/styles/main.css
@@ -262,20 +262,20 @@ nav {
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
-    width: 7px;
-    background: transparent;
+    width: 8px;
+    position: fixed;
 }
 
 ::-webkit-scrollbar-track {background: transparent;}
 
 ::-webkit-scrollbar-thumb {
-    background: #2c2c2c;
+    background: #1e1e1e;
     border-radius: 5px;
     z-index: 1;
     transition: all 1s;
 }
 
-::-webkit-scrollbar-thumb:hover {background: #3d3d3d;}
+::-webkit-scrollbar-thumb:hover {background: #2c2c2c;}
 
 
 @media (max-width: 1300px) {
