--- a/styles/main.css
+++ b/styles/main.css
@@ -138,7 +138,7 @@ nav {
     height: 500px;
 
     padding-top: 0;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 300px auto;
 
     transition: all 0.7s;
 }
