headers are no longer pure white

--- a/styles/breakout.css
+++ b/styles/breakout.css
@@ -6,10 +6,9 @@ main {
     margin-top: 4rem;
 }
 
-h2 {color: white;}
-strong {
-    color: white;
-}
+h2 {color: #e3e3e3;}
+
+strong {color: #e3e3e3;}
 
 ul, ol {
     font-family: "Inter", sans-serif;
