--- a/styles/breakout.css
+++ b/styles/breakout.css
@@ -7,20 +7,23 @@ main {
     transition: all 0.75s;
 }
 
-main .text-holder p {
-    margin-top: 25px;
-    margin-bottom: 25px;
-
+main .text-holder {
+    gap: 25px;
     transition: all 1s;
 }
 
-main.after .text-holder p {
-    margin-top: 20px;
-    margin-bottom: 20px;
+main.after .text-holder {
+    gap: 16px;
 }
 
 
-h2 {color: #e3e3e3;}
+h2 {
+    color: #e3e3e3;
+}
+
+p {
+    margin: 0;
+}
 
 strong {color: #e3e3e3;}
 
@@ -31,15 +34,24 @@ ul, ol {
 }
 
 code {
-    background-color: #1e1e1e;
-    border-radius: 3px;
-    padding: 5px;
+    background-color: #2c2c2c;
+    border-radius: 4px;
+    padding: 4px;
     margin: 0;
 }
 
-.dramatic {margin-top: 3rem;}
+.dramatic {margin-top: 1rem;}
 
-.text-holder {margin-top: 5rem;}
+.stack {
+    color: #999999;
+    margin-bottom: 3rem;
+}
+
+.text-holder {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+}
 
 .back-link p {
     color: #999999;
