--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 /* FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=swap');
 @font-face {
     font-family: "London-Underground";
     src: url("../media/london-underground-regular.ttf");
@@ -16,7 +16,6 @@ body {
     flex-direction: column;
     align-content: center;
     overflow-y: auto;
-    letter-spacing: 0.02rem;
 }
 
 main {
@@ -155,11 +154,13 @@ main.after #name .hero-title {line-height: 12rem;}
     margin: 12px auto;
 }
 
-.timeline-block {width: 12rem;}
+.timeline-block {
+    width: 12rem;
+    /*margin-top: 5px;*/
+}
 
 .timeline-text {
-    height: 160px;
-    margin-bottom: 65px;
+    height: 230px;
     transition: all 0.3s;
 }
 
@@ -168,7 +169,7 @@ main.after #name .hero-title {line-height: 12rem;}
     z-index: 10;
 }
 
-.timeline-space {height: 217px;}
+.timeline-space {height: 230px;}
 
 
 /* PROJECTS SECTION */
@@ -207,6 +208,7 @@ main.after #name .hero-title {line-height: 12rem;}
 }
 
 .card-title {
+    margin-top: 0;
     color: #e3e3e3;
     padding-bottom: 0.25rem;
     transition: all 0.3s;
@@ -229,7 +231,7 @@ main.after #name .hero-title {line-height: 12rem;}
 
 .social-link p {
     color: #999999;
-    transition: all 0.7s;
+    transition: all 0.3s;
 }
 
 .social-link:hover p {color: #e3e3e3;}
