--- a/styles/breakout.css
+++ b/styles/breakout.css
@@ -30,6 +30,14 @@ h3 {
     font-size: 1rem;
 }
 
+.display-img {
+    max-width: calc(42vw - 8rem);
+    max-height: calc(24vw);
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    border-radius: 10px;
+}
+
 .text-holder {
     display: flex;
     flex-direction: column;
@@ -42,7 +50,7 @@ h3 {
 }
 
 .text-holder h3 {
-    margin-top: 24px;
+    margin-top: 32px;
     margin-bottom: 12px;
 }
 
@@ -88,6 +96,18 @@ h3 {
     transform: translateY(3px);
 }
 
+.tall-image-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1e1e1e;
+    border: 2px #2c2c2c solid;
+    border-radius: 10px;
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
 @media (max-width: 1300px) {
     main {
         grid-template-columns: 15vw 60vw 15vw;
@@ -130,5 +150,12 @@ h3 {
 
     .header-holder {
         flex-direction: column;
+    }
+
+    .display-img {
+        max-width: calc(60vw - 8rem);
+        max-height: calc(24vh);
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 }
